--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,33 +1,33 @@
-app.name = Book Store
-page.home = Home
-page.books = Books
-page.authors = Authors
-page.error.404 = Error 404
-page.categories = Categories
-action.list = List
-action.view = Detail
-action.create = Create
-action.edit = Edit
-action.delete = Delete
-book.id = ID
-book.title = Title
-book.edition = Edition
-book.author = Author
-book.description = Description
-book.category = Category
-book.action = Action
-category.id = ID
-category.name = Name
-category.description = Description
-category.action = Action
-author.id = ID
-author.name = Name
-author.phone = Phone
-author.email = Email
+app.name = \u4e66\u5e97
+page.home = \u4e3b\u9875
+page.books = \u56fe\u4e66
+page.authors = \u4f5c\u8005
+page.error.404 = 404\u9519\u8bef
+page.categories = \u5206\u7c7b
+action.list = \u5217\u8868
+action.view = \u8be6\u60c5
+action.create = \u521b\u5efa
+action.edit = \u7f16\u8f91
+action.delete = \u5220\u9664
+book.id = \u7f16\u53f7
+book.title = \u6807\u9898
+book.edition = \u7248\u6b21
+book.author = \u4f5c\u8005
+book.description = \u63cf\u8ff0
+book.category = \u5206\u7c7b
+book.action = \u64cd\u4f5c
+category.id = \u7f16\u53f7
+category.name = \u540d\u79f0
+category.description = \u63cf\u8ff0
+category.action = \u64cd\u4f5c
+author.id = \u7f16\u53f7
+author.name = \u59d3\u540d
+author.phone = \u7535\u8bdd
+author.email = \u7535\u5b50\u90ae\u4ef6
 author.nrc = N.R.C
 author.dob = D.O.B
-author.address = Address
-
+author.address = \u5730\u5740
+author.action = \u64cd\u4f5c
 NotBlank.book.title = Enter book title.
 NotBlank.book.edition = Enter book edition.
 NotBlank.book.description = Enter book description.
@@ -37,8 +37,8 @@ NotNull.book.author = Plz selected author name.
 #NotBlank.category.name = Enter category name.
 #NotBlank.category.description = Enter description.
 
-error.404 = Page not found.
+error.404 = \u9875\u9762\u672a\u627e\u5230.
 
-back.to.home = Back to Home
+back.to.home = \u8fd4\u56de\u4e3b\u9875
 
-copyright = Copyright \u00A9 {0} Naing Win | All Rights Reserved
+copyright =\u7248\u6743\u6240\u6709
